# CivicAnalysis

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: refresh-politicians.yml  run_pipeline.yml
backend/: db.py  llm_engine.py  main.py  migrate.py  pyproject.toml  requirements.txt  schema.py
cron/: keep_alive.py  trigger_pipeline.py
docs/: ARCHITECTURE_DECISIONS.md  DATABASE_ARCHITECTURE.md  DOMAINS_AND_NUANCES.md  PLANNING.md  TEAM_ONBOARDING.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: boundaries-districts.geojson
frontend/public/data/: politicians.json
frontend/public/skyline-video/: skyline.webm
frontend/scripts/: refresh-politicians.ts
frontend/src/app/: globals.css  head.tsx  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/lib/: api.ts  backend-internal.ts  civicProfileDemographics.ts  floating-fab-styles.ts  generalized-briefing.ts  policy-reply.ts  politicians.ts  profileIssueToPolicyArea.ts  scrapers.ts  storage.ts  useFooterAwareBottom.ts  useProfileActivityFeed.ts  useRecentPoliciesSnapshot.ts
pipeline/: __init__.py  backfill_history.py  base_scraper.py  embedding_engine.py  load_districts.py  requirements.txt  run_pipeline.py  seed_politicians.py  sync_data.py  tag_classifier.py
pipeline/scrapers/: gothamist_rss.py  nyc_council_legistar.py  nyc_council_meetings.py  nyc_council_rss.py  nys_senate_bills.py  nys_senate_transcripts.py  sample_rss_scraper.py
(+44 files in other folders)
