[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "en-core-web-sm",
    "fastapi>=0.115.0",
    "fastembed>=0.5.0",
    "groq>=0.12.0",
    "lxml>=5.2.1",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "slowapi>=0.1.9",
    "spacy>=3.7.0",
    "sqlmodel>=0.0.16",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
